test/expr/bad-setlocal-name.txt
;;; ERROR: 1
(module (func
  (local $n i32)
  (set_local n (i32.const 0))))
(;; STDERR ;;;
expr/bad-setlocal-name.txt:4:14: unexpected token "n"
expr/bad-setlocal-name.txt:4:16: syntax error, unexpected (, expecting INT or VAR
;;; STDERR ;;)
